--- a/index.html
+++ b/index.html
@@ -288,16 +288,14 @@
         </h3>
         <div class="row justify-content-center">
             <div class="card col-12 col-md-6">
-                <p class="mbr-text mbr-fonts-style mb-4 display-7">"Lymphedema is scary.  Fortunately, I have Dr. Judith West as my therapist.  In the convenience and comfort of my home, Dr. West treated me with knowledge, professionalism, compassion and care. She listened to and respected  my concerns.  She found solutions that worked for me.  Dr. West is an advocate for her patients and I am less afraid because she is on my side."</p>
+                <p class="mbr-text mbr-fonts-style mb-4 display-7">Lymphedema is scary.  Fortunately, I have Dr. Judith West as my therapist.  In the convenience and comfort of my home, Dr. West treated me with knowledge, professionalism, compassion and care. She listened to and respected  my concerns.  She found solutions that worked for me.  Dr. West is an advocate for her patients and I am less afraid because she is on my side.</p>
                 <div class="d-flex mb-md-0 mb-4">
                     <div class="image-wrapper">
-                        <img src="assets/images/mbr-100x66.jpeg" alt="Mobirise">
+                        <img src="assets/images/slide1-100x75.jpg" alt="Mobirise">
                     </div>
                     <div class="text-wrapper">
-                        <p class="name mbr-fonts-style mb-1 display-4">
-                            <strong>M.G.</strong>
-                        </p>
-                        <p class="position mbr-fonts-style display-4">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
+                        <p class="name mbr-fonts-style mb-1 display-7">Mel G</p>
+                        <p class="position mbr-fonts-style display-7">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <br>I was lucky enough to have Dr Judi West recommended as a lymphedema therapist. She was professional and extremely friendly She answered all my questions and explained every step of the therapy. Judi helped me get the proper compression sleeves and gloves. Best of all she came to my home for the sessions I feel so much better and more comfortable now. . I would highly recommend her to anyone.&nbsp; &nbsp;<br><br>Fran Z.</p>
                     </div>
                 </div>
             </div>
@@ -308,8 +306,8 @@
                         <img src="assets/images/slide1-100x75.jpg" alt="Mobirise">
                     </div>
                     <div class="text-wrapper">
-                        <p class="name mbr-fonts-style mb-1 display-4">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
-                        <p class="position mbr-fonts-style display-4">Julia P.<br><br></p>
+                        <p class="name mbr-fonts-style mb-1 display-7">Julia P.</p>
+                        <p class="position mbr-fonts-style display-7"><br><br><br><br><br><br><br><br><br><br></p>
                     </div>
                 </div>
             </div>
@@ -445,7 +443,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/n" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Built with <a href="https://mobirise.site/b" style="color:#aaa;">Mobirise</a> website theme</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/i" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/r" style="color:#aaa;">This site</a> was built with Mobirise theme</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
